# MusicFlowOrganizer

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  COMPREHENSIVE_REVIEW_REPORT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_DJ_ENGINE.md  USAGE.md  audio_compatibility_test.py  cross_platform_environment_test.py  debug_dataclass.py  debug_mixinkey.py  debug_parsing.py  debug_persistence.py  demo_virtual_env.py  describe_app_ui.py  dj_engine_complete_test.py  djflow.py  error_recovery_resilience_test.py  fix_text_final.py  fix_text_issues.py  layout_improvements_summary.py  main.py  musicflow.sh  performance_load_test.py  persistence_status_final.py  pyproject.toml  quick_debug.py  requirements.txt  requirements_dj.txt  run_all_tests_360.py  run_musicflow.py  security_data_integrity_test.py  test_ai_integration.py  test_app.py  test_cache_fix.py  test_mixinkey_read.py  test_persistence.py  (+9 more)
.github/workflows/: ci.yml
assets/: icon.icns
src/audio/: __init__.py  audio_cache.py  preview_player.py
src/core/: __init__.py  async_filter_engine.py  audio_analyzer.py  file_operations_manager.py  file_organizer.py  file_organizer_refactored.py  genre_classifier.py  library_scanner.py  mixinkey_integration.py  organization_planner.py  performance_manager.py  result_cache.py  security_utils.py  similarity_engine.py  track_analyzer.py
src/plugins/: __init__.py  dj_playlist_plugin.py  plugin_manager.py
src/plugins/dj_engine/: __init__.py  camelot_wheel.py  coherence_metrics.py  enrichment.py  playlist_builder.py
src/ui/: __init__.py  main_window.py  performance_optimized_widget.py  player_widget.py
tests/: __init__.py  conftest.py
tests/unit/core/: test_audio_analyzer.py  test_library_scanner.py  test_security_utils.py  test_track_analyzer.py
